# nexus-ros2

./: README.md
nexus_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
nexus_ws/install/code_py/lib/code_py/: actuator_control  jetpack_api  motor_control  move_w_e
nexus_ws/install/code_py/share/code_py/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
nexus_ws/install/manual/lib/manual/: control  joystick
nexus_ws/install/manual/share/manual/: package.sh  package.xml
nexus_ws/install/robot_description/share/robot_description/: package.sh
nexus_ws/install/rosapi/share/rosapi/: package.sh
nexus_ws/install/rosapi_msgs/share/rosapi_msgs/: local_setup.sh  package.sh
nexus_ws/install/rosbridge_library/share/rosbridge_library/: package.sh
nexus_ws/install/rosbridge_msgs/share/rosbridge_msgs/: local_setup.sh  package.sh
nexus_ws/install/rosbridge_server/share/rosbridge_server/: package.sh
nexus_ws/install/rosbridge_suite/share/rosbridge_suite/: package.sh
nexus_ws/log/: latest_build
nexus_ws/src/code_py/: MANIFEST.in  package.xml  setup.cfg  setup.py
nexus_ws/src/code_py/code_py/: motor_control.py  move_w_e.py
nexus_ws/src/code_py/launch/: ejecutar.launch.py
nexus_ws/src/manual/: estado.txt  setup.py
nexus_ws/src/robot_description/: CMakeLists.txt  package.xml
nexus_ws/src/robot_description/launch/: view_robot.py
nexus_ws/src/robot_description/rviz/: urdf.rviz
nexus_ws/src/robot_description/urdf/: JPAC2.urdf
nexus_ws/src/ucb_interface/: CMakeLists.txt
nexus_ws/src/ucb_interface/msg/: Manual.msg
(+80 files in other folders)
